[package]
name = "hyper-openssl-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14" }
openssl = "0.10"
tokio = { version = "1.0", features = ["full"] }
tokio-openssl = "0.6"
tokio-stream = "0.1"
tracing = "0.1"

[dev-dependencies]
warp = "0.3"
reqwest = "0.11"
env_logger = "*"
test-log = {version = "0.2", features = ["trace"]}
tracing = {version = "0.1", default-features = false}
tracing-subscriber = {version = "0.3", default-features = false, features = ["env-filter", "fmt"]}
